--- a/src/reservation/styles/ReservationForm.module.scss
+++ b/src/reservation/styles/ReservationForm.module.scss
@@ -35,6 +35,7 @@ label {
 }
 
 th {
+  font-size: 18px;
   width: 50%;
   text-align: center;
 }
@@ -43,18 +44,36 @@ th {
   font: inherit;
   color: whitesmoke;
   background: #802bb1;
+  height: 45px;
   width: 100%;
   outline: none;
   border-radius: 5px;
-  border: 2px solid var(--color-text);
+  border: 2px solid black;
   padding-left: 15px;
   font-size: 16px;
   border-bottom-width: 2px;
   transition: all 0.3s ease;
 }
 
+select::-webkit-scrollbar{
+  width: 10px;
+}
+
+select::-webkit-scrollbar-track{
+  background: black;
+  border-radius: 5px;
+}
+
+select::-webkit-scrollbar-thumb{
+  background: #802bb1;
+  border-radius: 5px;
+  &:hover{
+      background: #554f6f;
+  }
+}
+
 input[type="submit"] {
-  height: 100%;
+  height: 45px;
   width: 100%;
   font-weight: bold;
   letter-spacing: 1px;
@@ -70,6 +89,18 @@ input[type="submit"] {
     color: black;
     fill: black;
   }
+}
+
+@media (max-width: 584px){
+
+  .inputForm, select {
+      width: 90%;
+  }
+
+  input[type="submit"] {
+    width: 93%;
+  }
+
 }
 
 @keyframes loginSlide{
