--- a/src/styles/AdminNavbar.module.scss
+++ b/src/styles/AdminNavbar.module.scss
@@ -7,6 +7,17 @@
     font-family: "Architects Daughter", cursive;
 }
 
+.adminTD{
+    border: 1px solid;
+    border-radius: 12px;
+}
+
+
+.adminTR, .adminTD {
+    padding: 15px;
+    text-align: left;
+}
+
 .admin {
     overflow-x: hidden;
     @include mixins.maxWidth();
@@ -55,16 +66,15 @@
 }
 
 .meal {
-    display: flex;
-    justify-content: space-between;
     margin: 1rem;
     padding-bottom: 0.5rem;
     border-bottom: 2px solid #802bb1;
 }
 
 .btn {
+    display: block;
     height: 45px;
-    width: 45%;
+    width: 100%;
     margin: 35px;
     outline: none;
     border: none;
@@ -88,13 +98,18 @@
     }
 }
 
+.EditSelect{
+    width: 55%;
+}
+
 .adminSpan {
     color: whitesmoke;
 }
 
+
 .addEditBtn {
     height: 45px;
-    width: 30%;
+    width: 23%;
     margin: 8px;
     outline: none;
     border: none;
@@ -122,7 +137,7 @@
 .adminInput {
     background: #802bb1;
     margin: 8px;
-    width: 30%;
+    width: 24%;
     height: 45px;
     outline: none;
     border-radius: 5px;
@@ -144,10 +159,9 @@
 
 .deleteBtn {
     height: 45px;
-    width: 8%;
+    width: 100%;
+    margin-top: 10px;
     margin-bottom: 10px;
-    outline: none;
-    border: none;
     font-size: 18px;
     font-weight: 500;
     border-radius: 5px;
@@ -169,11 +183,22 @@
 }
 
 @media screen and (max-width: 768px){
+    .adminTable{
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .adminTR, .adminTD {
+        display: block;    
+    }
+
     .btn {
-        width: 310px;
+        display: block;  
+        width: 90%;
     }
 
     .addEditBtn {
+        display: block;  
         width: 100%;
     }
 
@@ -187,19 +212,28 @@
     }
 
     .deleteBtn{
-        position: relative;
-        left: 42%;
-        width: 100px;
+        display: block;  
+        width: 100%;
     }
 }
 
 @media (max-width: 584px) {
+    .adminTable{
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .adminTR, .adminTD {
+        display: block;    
+    }
 
     .btn {
-        width: 125px;
+        display: block;  
+        width: 90%;
     }
 
     .addEditBtn {
+        display: block;  
         width: 100%;
     }
 
@@ -213,11 +247,11 @@
     }
 
     .deleteBtn{
-        position: relative;
-        left: 32%;
-        width: 100px;
+        display: block;  
+        width: 100%;
     }
 }
+
 @keyframes loginSlide {
     from {
         opacity: 0;
